syntax = "proto3";

package grpc;

service ConfigService {
    rpc StoreConfig (StoreConfigRequest) returns (Config);
    rpc RetrieveConfig (RetrieveConfigRequest) returns (Config);
}

message Config {
    string id = 1;
    string name = 2;
    int64 last_modified = 3;
    int32 version = 4;
    string group = 5;
    bytes properties = 6;
}

message StoreConfigRequest {
    string id = 1;
    string name = 2;
    string group = 5;
    bytes properties = 6;
}

message RetrieveConfigRequest {
    string id = 1;
    string group_id = 2;
}